--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,18 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
+collections:
+  - "lti1_docs"
+
 # Build settings
 markdown: kramdown
+
+gems:
+  - octopress-debugger
+
+exclude:
+  - "bower_components"
+  - "bower.json"
+  - "node_modules"
+  - "package.json"
+  - "Gruntfile.coffee"
