--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-exec": "^0.4.6"
+    "grunt-exec": "^0.4.6",
+    "yamljs": "^0.2.3"
   }
 }
